--- a/look.css
+++ b/look.css
@@ -1,4 +1,5 @@
 body{
+  max-width:98%;
   background-color: #dedede;
 }
 .gallery{
@@ -14,7 +15,7 @@ body{
 }
 
 figure{
-  max-width: 24%;
+  max-width: 100%;
   margin: 0.5%;
   border: 1px solid #777;
   border-radius:10px;
@@ -23,6 +24,7 @@ figure{
 }
 figure img{
 width: 100%;
+overflow:hidden;
 }
 figure figcaption{
   text-align: center;
@@ -30,7 +32,10 @@ figure figcaption{
 }
 .mySlides {
   display:none;
+  width:100%;
+  height:700px;
 }
+
  i {
     display:inline;
     margin: 5%;
